bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: unclosed character literal
var string: lettre=''
                   ^BDR:1: error: illegal start of simple expression
var string: lettre=''
                   ^